<?xml version="1.0"?>
<package format="2">
  <name>pcl_catkin</name>
  <version>1.7.2</version>
  <description>Catkin wrapper for PCL.</description>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>libvtk7-dev</exec_depend>  <!-- required for the buildserver -->

</package>
