<?xml version="1.0"?>
<package format="2">
    <name>signed_distance_field</name>
    <version>0.0.0</version>
    <description>The signed_distance_field package</description>

    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>grid_map_core</depend>
    <depend>pcl_ros</depend>

</package>
