<?xml version="1.0"?>
<package format="2">
  <name>convex_plane_decomposition</name>
  <version>0.0.0</version>
  <description>The convex_plane_decomposition package</description>

  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cgal5_catkin</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_filters_rsl</depend>

</package>
