<?xml version="1.0"?>
<package format="2">
    <name>convex_plane_decomposition_ros</name>
    <version>0.0.0</version>
    <description>The convex_plane_decomposition_ros package</description>

    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>convex_plane_decomposition</depend>
    <depend>convex_plane_decomposition_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>grid_map_demos</exec_depend>

</package>
