<?xml version="1.0"?>
<package format="2">
  <name>grid_map_filters_rsl</name>
  <version>0.1.0</version>
  <description>Extension of grid map filters package with op-cv filters and others</description>
  <maintainer email="fabian.jenelten@mavt.ethz.ch">Fabian Jenelten</maintainer>

  <author email="fabian.jenelten@mavt.ethz.ch">Fabian Jenelten</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_core</depend>

  <test_depend>gtest</test_depend>
  <test_depend>cmake_code_coverage</test_depend>
</package>
